[package]
name = "openmina-node-web"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"
serde = "1.0.158"
serde_json = "1.0.94"
derive_more = "0.99.17"
rayon = "1.5"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
libp2p-identity = { version = "=0.2.7", features = ["peerid"] }
redux = { workspace = true }
ledger = { workspace = true }
mina-p2p-messages = { workspace = true }
mina-signer = { workspace = true }
bytes = "1.4.0"
thiserror = "1.0.44"
anyhow = "1.0.70"
nix = { version = "0.26.2", features = ["signal"] }
vrf = { workspace = true }
jsonpath-rust = "0.5.0"

openmina-node-common = { path = "../common" }
node = { path = "../../node" }

[features]
default = ["p2p-webrtc"]
p2p-webrtc = ["openmina-node-common/p2p-webrtc"]
