[package]
name = "p2p-testing"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redux = { workspace = true }
p2p = { path = ".." }
mina-p2p-messages = { path = "../../mina-p2p-messages" }

tokio = { version = "1.26.0", features = [ "sync", "macros" ] }
libp2p = { workspace = true, features = ["macros", "serde", "tcp", "dns", "tokio", "yamux", "pnet", "noise", "gossipsub", "identify", "kad"] }
libp2p-rpc-behaviour = { path = "../libp2p-rpc-behaviour" }
futures = "0.3.30"
rand = "0.8.5"
derive_more = "0.99.17"
thiserror = "1.0.57"
derive-getters = "0.3.0"
derive_builder = "0.20.0"
openmina-core = { path = "../../core" }
pin-project-lite = "0.2"
lazy_static = "1.4.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
getrandom = "0.2.14"
tracing-log = "0.2.0"
serde_json.workspace = true
