[package]
name = "openmina-archive-breadcrumb-compare"
version = "0.15.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = [ "derive", "env" ] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { workspace = true }
anyhow = "1.0"
mina-p2p-messages = { workspace = true }
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "400b52c" }
serde_json = "1.0"
similar = "2.6.0"
